# sonicrust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: app.rs  config.rs  main.rs  mpris_handler.rs  player.rs  search.rs  subsonic.rs  theme.rs  ui.rs
src/app/: cover_art.rs  mpris.rs  navigation.rs  playback.rs  queue.rs  search.rs
